...
internal object ComparisonPreviewData {

    val jonSnow = Character(
        id = "583",
        name = "Jon Snow",
        gender = "Male",
        culture = "Northmen",
        born = "In 283 AC",
        died = "",
        titles = listOf("Lord Commander of the Night's Watch", "King in the North"),
        aliases = listOf("Lord Snow", "The White Wolf"),
        father = "",
        mother = "",
...
